--- a/InfinityStore/Infinity.Store/appsettings.json
+++ b/InfinityStore/Infinity.Store/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "IdentityConnection": "Server=ADMIN\\THANHDATINSTANCE;Database=InfinityStoreDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "MainConnection": "Server=DESKTOP-R7KJ6NN;Database=InfinityStoreDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
