--- a/InfinityStore/Infinity.Store/appsettings.json
+++ b/InfinityStore/Infinity.Store/appsettings.json
@@ -2,6 +2,16 @@
   "ConnectionStrings": {
     "MainConnection": "Server=DESKTOP-R7KJ6NN;Database=InfinityStoreDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  "Providers": {
+    "Facebook": {
+      "AppId": "819335045537568",
+      "AppSecret": "45a0df2dfae531c80c36d5af7654cf9a"
+    },
+    "Google": {
+      "ClientId": "664769038445-mubnjosvilm0n2cim1b7f1ldt6sd7uai.apps.googleusercontent.com",
+      "ClientSecret": "pzvNaCTs_uU0vaXRimavxpOC"
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
